<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".FoodCalories">
    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout"
        />
    <LinearLayout
        android:background="#F4BE2C"
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        >
        <TextView
            android:id="@+id/calorieText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/calories"
            android:textColor="#000"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/valueCal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textColor="#000"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/kcal"
            android:layout_width="0dp"
            android:textColor="#000"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kcal" />
        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:background="#B4161B"
            android:textColor="#fff"
            android:textSize="24sp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>